<resources>
    <string name="app_name">Tracker</string>
    <string name="PSTK_PUBLIC_KEY" translatable="false">YOUR_PAYSTACK_PUBLIC_KEY</string>
    <string name="category_image">category image</string>
    <string name="enable_dark_mode">toggle night and dark mode</string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="categories">Categories</string>
    <string name="developer_logo">Developer Logo</string>
    <string name="product_image">Product Image</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="nav_menu_app">App</string>
    <string name="nav_social_media">Social Media</string>
    <string name="nav_facebook" translatable="false">Facebook</string>
    <string name="nav_more">More</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_developer">About the developer</string>
    <string name="nav_coupons">Coupons</string>
    <string name="nav_rate_us">Rate Us</string>
    <string name="nav_terms">Terms and Conditions</string>
    <string name="nav_return">Return and refund policy</string>
    <string name="nav_policy">Privacy policy</string>
    <string name="nav_log_out"><b style="color:red;">Log out</b></string>
    <string name="nav_twitter" translatable="false">Twitter</string>
    <string name="nav_instagram" translatable="false">Instagram</string>
    <string name="openNavDrawer" translatable="false">Navigation Drawer Open</string>
    <string name="closeNavDrawer" translatable="false">Navigation Drawer Close</string>
    <string name="nav_share_app">Share App</string>
    <string name="nav_full_name">Full name</string>
    <string name="nav_email" translatable="false">a4auwal@gmail.com</string>
    <string name="faqs">FAQS</string>
    <string name="dark_mode">Dark mode</string>
    <string name="acc_title">Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or_login_using">or login using</string>
    <string name="no_account">Don\'t have an Account ?</string>
    <string name="register_here">Register Here</string>
    <string name="create_new_account">Create New Account</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="have_account">Already have an Account ?</string>
    <string name="login_here">Login Here</string>
    <string name="remember_me">Remember Me</string>
    <string name="log_in_title">Login In To Your Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="accept_terms">I Agree to Terms and Conditions</string>
    <string name="agreement">I Agree To Terms of Use</string>
    <string name="empty_email_field">Email is required</string>
    <string name="invalid_email_error">Please enter a valid email address</string>
    <string name="empty_username_field">Username is required</string>
    <string name="username_too_small">Username should be greater than 4 digits</string>
    <string name="username_too_long">Username should be less than 15 digits</string>
    <string name="password_dont_match_error">Password don\'t match check your inputs.</string>
    <string name="agreement_error">You must agree to Terms of service.</string>
    <string name="username_as_password_error">Username can\'t be your password.</string>
    <string name="email_as_password_error">Email can\'t be your password.</string>
    <string name="password_too_short_error">Password too short should be greater than 4 digits</string>
    <string name="password_not_secure_error">Password is not secure.</string>
    <string name="login_email_empty_error">please enter password</string>
    <string name="email_or_username">Email / Username</string>
    <string name="email_or_username_empty_error">email or username is required</string>
    <string name="email_or_username_too_short_error">email or password is too short</string>
    <string name="are_you_a_transporter">Are you a Transporter ?</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="battery_saver">Battery saver</string>
    <string name="auto_time">Auto time</string>
    <string name="dark_mode_follow_system">Follow system</string>
    <string name="transporter_login">Transporter Login</string>
    <string name="login_as_seller">Login as Seller</string>
    <string name="login_as_transporter">Login as Transporter</string>
    <string name="hi_there_welcome">Hi There\nWelcome</string>
    <string name="seller_login">Seller login</string>
    <string name="contain_special_char">Username contain invalid characters.</string>
    <string name="white_space_error">Username can\'t have whitespace.</string>
    <string name="password_numeric_error">Password is entirely numeric.</string>
    <string name="confirm_password_error">You need to confirm your password.</string>
    <string name="empty_password">Password is required.</string>
    <string name="read_terms">Read Terms of Use here</string>
    <string name="agree_snackbar">I Agree</string>
    <string name="choose_username">Choose username</string>
    <string name="please_wait">Please wait…</string>
    <string name="login_error">Unable to login with provided credentials. Kindly check your inputs.
    </string>
    <string name="login_success">Login successful! OK</string>
    <string name="log_in_as">Log in as</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="account_created">Account Created Successfully.</string>
    <string name="click_on_the_link_sent">Click on the link sent to</string>
    <string name="to_verify_email">to verify your email. Would you like to complete your profile
        details ?</string>
    <string name="yes_continue">Yes, Continue.</string>
    <string name="no_take_me_home">No, Take me Home.</string>
    <string name="forgot_password_body">No worries ! we\'ve got you covered, enter your sign up Email
        and we will send link to reset your Password.</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="reset_error">An error has occurred try again or check your inputs.
    Having difficulty resetting you can contact the customer service team via the help center.</string>
    <string name="forgot_password_success_body">An link has been sent to your email address, click on the link to reset your password</string>
    <string name="forgot_pass_success_title">Reset password success !</string>
    <string name="forgot_pass_title_error">Error !</string>
    <string name="forgot_password_img">forgot password</string>
    <string name="email_inused_error">A user with that email already exists.</string>
    <string name="username_inused_error">A user with that username already exists.</string>
    <string name="server_conn_server">Unable to establish communication to our servers.
    Check your internet connection &amp; try again later.</string>
    <string name="internet_error_snackbar">OK</string>
    <string name="empty_username_email">Please enter your email or username</string>
    <string name="english">English</string>
    <string name="hausa">Hausa</string>
    <string name="arabic">Arabic</string>
    <string name="user_anonymous">Guest User</string>
    <string name="verified_email">verified email</string>
    <string name="dev_fb">visit developer page on Facebook</string>
    <string name="dash_orders">Orders</string>
    <string name="dash_tracking">Tracking</string>
    <string name="dash_settings">Settings</string>
    <string name="dash_profile">Profile</string>
    <string name="dash_help_center">Help Center</string>
    <string name="dash_terms">Terms of Service</string>
    <string name="dash_about">About Us</string>
    <string name="basic_info">Basic Info</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="birth_date">Birth Date</string>
    <string name="currency">Currency</string>
    <string name="gender">Gender</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="address">Address</string>
    <string name="profile_title">Profile</string>
    <string name="viewed_product_img">Viewed product image</string>
    <string name="change_pass_body">Enter your current password to be able to change your password.
    </string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="activities">Activities</string>
    <string name="delete_address">Delete</string>
    <string name="edit_address">Edit</string>
    <string name="address_default">Default</string>
    <string name="set_default">Set as default</string>
    <string name="more">More</string>
    <string name="clear_all">Clear All</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="select_country_code">Select country code</string>
    <string name="phone_number">Phone number</string>
    <string name="gender_select">Select your gender :</string>
    <string name="male">Male</string>
    <string name="select_currency">Select currency:</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="is_organisation">Are you an organisation ?</string>
    <string name="upload_proof_need">You need to upload proof.</string>
    <string name="update">Update</string>
    <string name="upload_certificate">click here to upload your certificate</string>
    <string name="dob_dialog_title">Enter your Date of Birth.</string>
    <string name="dob_day">Day</string>
    <string name="dob_month">Month</string>
    <string name="dob_year">Year</string>
    <string name="cancel">Cancel</string>
    <string name="account_created_successfully">Congratulations! your account has been successfully created.</string>
    <string name="live_chat">Live Chat</string>
    <string name="open_source_license">Open Source Licences</string>
    <string name="report_bug">Report a bug</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms and Conditions</string>
    <string name="verify_email_info">To access all the features of this app you need to verify your email by click on the link sent to .</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="update_profile">Update profile</string>
    <string name="by_continuing_you_agree_to_terms">By continuing you agree to <a href="">Privacy Policy</a>,  <a href="">Terms and Conditions</a> of using this App.</string>
    <string name="skip">Skip</string>
    <string name="nav_linkedin">LinkedIn</string>
    <string name="not_driver_alert">You are either <em>FIRED</em> or <em>DISMISSED</em>, if that not the case contact <b>office nearest to you</b> to be registered or verified.</string>
    <string name="notice">Notice !</string>
    <string name="ewallet">eWallet</string>
    <string name="home">Home</string>
    <string name="request">Requests</string>
    <string name="account">Account</string>
    <string name="bank_account_info">Bank Info</string>
    <string name="name">Name:</string>
    <string name="acc_num">Acc No. :</string>
    <string name="bank_name">Bank Name :</string>
    <string name="str_confirm">Confirm</string>
    <string name="my_location">My Location</string>
</resources>