<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Account.LaunchActivity">

    <ImageView
        android:id="@+id/welcomeSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_round_cancel_48"
        android:elevation="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/skip"
        app:tint="@color/textColor" />

    <TextView
        android:id="@+id/welcomeTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:letterSpacing="0.2"
        android:lineSpacingExtra="6dp"
        android:text="@string/hi_there_welcome"
        android:textColor="@color/colorAccent"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="start"
        app:layout_constraintTop_toBottomOf="@id/welcomeSkip"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/agreementText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:autoLink="all"
        android:fontFamily="@font/raleway_subtitle"
        android:gravity="center"
        android:lineSpacingExtra="8dp"
        android:linksClickable="true"
        android:text="@string/by_continuing_you_agree_to_terms"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/loginSeller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTitleTv" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginSeller"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorSecondary"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/login_as_seller"
        android:onClick="sellerLogin"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toTopOf="@id/loginDriver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/colorAccent"
        android:fontFamily="@font/raleway_subtitle"
        app:strokeWidth="2dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginDriver"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/login_as_transporter"
        android:textAllCaps="true"
        android:onClick="transporterLogin"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        android:fontFamily="@font/raleway_subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:onClick="forgotPassword"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/raleway_subtitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>