<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:padding="24dp"
    app:cardCornerRadius="24dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:paddingBottom="8dp"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/successAnim"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:elevation="2dp"
            android:src="@raw/account_done"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <TextView
            android:id="@+id/sucessTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/overlock_headline"
            android:gravity="center"
            android:letterSpacing="0.22"
            android:padding="8dp"
            android:text="@string/account_created_successfully"
            android:textAllCaps="true"
            android:textColor="@color/colorSecondary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/successBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_subtitle"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/verify_email_info"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gotoEditProfile"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/raleway_subtitle"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/update_profile"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/gotoHome"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:fontFamily="@font/raleway_subtitle"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/continue_shopping"
            android:textAllCaps="false"
            android:textColor="@color/textColor"
            android:textStyle="normal"
            app:cornerRadius="24dp"
            app:elevation="4dp"
            app:strokeColor="@color/textColor"
            app:strokeWidth="1dp" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>